# anud12.github.io_boxes

./: .gitignore  index.html  index.html.html  index.html.js  index.js  index.js.map  job.js  package.json
#/: babel.config.js  build.js  index.tsx  index_add.tsx  job.js  job.test.js  job.test.ts  job.ts  package.json  tsconfig.json
#job/: Cargo.toml  index.js  package-lock.json  package.json
#job/src/: main.rs
#src/: index.tsx  package-lock.json
#ui/: index.tsx  index_add.tsx  job.test.js  package-lock.json  package.json
.github/workflows/: build-js.yml  node.js.yml  rust.yml
add/: index.html  index.js  index.js.map
service/: Cargo.toml  package-lock.json  package.json
service/src/: login.rs  main.rs  printable.rs  service_account.json
service/src/api/: google_session.rs  mod.rs  session.rs  session_data.rs
service/src/api/file/: metadata.rs
service/src/api/files/: file__query_api.rs  file_api.rs  file_data.rs  file_query_api.rs  mod.rs
service/src/implementation/: google_drive_file.rs  mod.rs
