[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
jwt = "0.16.0"
rand = "0.8.5"
ring = "0.16.20"
rng = "0.1.0"
rsa = { version = "0.9.0", features = ["sha2"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
ureq = { version = "2.6.2", features = ["serde", "serde_json", "json"] }
url = "2.3.1"
